Adds initial home and leaderboard components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,12 @@
 
   <div class="container">
     <header>
-      <a [routerLink]="['/']" class="logo">
+      <a [routerLink]="['/']">
         {{ title }}
       </a>
     </header>
+
+    <app-home></app-home>
   </div>
 </main>
 
