--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,57 +1,16 @@
 <table>
     <thead>
-        <td>Rank</td>
-        <td>Score</td>
-        <td>Name</td>
+        <tr>
+            <td>Rank</td>
+            <td>Score</td>
+            <td>Gamertag</td>
+        </tr>
     </thead>
-    <tr>
-        <td>1</td>
-        <td>46</td>
-        <td>Posco Bracegirdle</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>45</td>
-        <td>Bildad Pott</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>44</td>
-        <td>Richomeres Burrows</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>43</td>
-        <td>Hending Sandheaver</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>32</td>
-        <td>Engilbert Hayward</td>
-    </tr>
-    <tr>
-        <td>6</td>
-        <td>24</td>
-        <td>Gozolon Banks</td>
-    </tr>
-    <tr>
-        <td>7</td>
-        <td>23</td>
-        <td>Ratold Gawkroger</td>
-    </tr>
-    <tr>
-        <td>8</td>
-        <td>16</td>
-        <td>Crassus Greenhand</td>
-    </tr>
-    <tr>
-        <td>9</td>
-        <td>15</td>
-        <td>Roderic Banks</td>
-    </tr>
-    <tr>
-        <td>10</td>
-        <td>10</td>
-        <td>Dudo Burrows</td>
-    </tr>
+    <tbody>
+        <tr *ngFor="let score of scores">
+            <td>{{ score.rank }}</td>
+            <td>{{ score.score }}</td>
+            <td><img src="https://cataas.com/cat" style="width:36px; height:36px; vertical-align: middle;"> {{ score.gamertag }}</td>
+        </tr>
+    </tbody>
 </table>
