moves data to data service

--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -7,7 +7,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let score of scores">
+        <tr *ngFor="let score of scoreList">
             <td>{{ score.rank }}</td>
             <td>{{ score.score }}</td>
             <td><img src="https://cataas.com/cat" style="width:36px; height:36px; vertical-align: middle;"> {{ score.gamertag }}</td>
